# yartyfactory

./: .gitignore  pyproject.toml
feeder/: config.py  crud.py  database.py  main.py  models.py  schemas.py  storage.py
tests/: test_sw_feeder.py
